# InsightX

./: .gitignore  Architecture.md  CLAUDE.md  DEBUGGING.md  README.md  azure-pipeline.yml  docker-compose.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
api/app/: main.py
api/app/core/: config.py  engines_config.py  guards.py  security.py
api/app/db/: base.py  session.py
api/app/db/models/: __init__.py  annotation.py  chat.py  datasource.py  nl_query.py
api/app/modules/annotations/: router.py  schemas.py  service.py
api/app/modules/auth/: router.py
api/app/modules/chat/: router.py  schemas.py  service.py
api/app/modules/datasources/: connection_tester.py  credential_encryptor.py  router.py  schema_inspector.py  schemas.py  service.py  spark_session_manager.py
api/app/modules/datasources/drivers/: delta_driver.py  mssql_driver.py  oracle_driver.py  postgres_driver.py
api/app/modules/nl_query/: __init__.py  context_builder.py  executor.py  llm_client.py  router.py  schema_graph.py  schemas.py  service.py  sql_validator.py
api/app/modules/nl_query/agent/: edges.py  graph.py  state.py
api/app/modules/nl_query/agent/nodes/: chat_node.py  context_loader.py  intent_classifier.py  result_analyzer.py  safety_validator.py  sql_executor.py  sql_generator.py  (+2 more)
api/app/modules/nl_query/executors/: __init__.py  base.py  delta.py  oracle.py  postgresql.py
api/app/modules/nl_query/knowledge_base/: few_shot.py
api/database/migrations/: 001_create_datasources.sql  002_create_annotations.sql  003_create_nl_query.sql
(+41 files in other folders)
