[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "aiosqlite==0.22.1",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asyncpg==0.31.0",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "click==8.4.1",
    "colorama==0.4.6",
    "cryptography==49.0.0",
    "fastapi==0.115.5",
    "greenlet==3.5.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.8.0",
    "httpx==0.28.1",
    "idna==3.18",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.2.28",
    "oracledb==4.0.1",
    "psycopg2-binary==2.9.12",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "pyjwt==2.10.1",
    "pyodbc==5.3.0",
    "pyspark==3.5.8",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.50",
    "sqlglot==30.12.0",
    "starlette==0.41.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.32.1",
    "watchfiles==1.2.0",
    "websockets>=14.0,<16",
]
